# EHeating-CYD

./: .gitignore  CMakeLists.txt  README.md  Todo.txt  partitions.csv  sdkconfig.defaults
cal_tool/: CMakeLists.txt
cal_tool/main/: main.c
main/: CMakeLists.txt  app_state.h  display.c  display.h  dns_server.c  dns_server.h  ds18b20.c  ds18b20.h  main.c  mqtt_manager.c  mqtt_manager.h  nvs_config.c  nvs_config.h  ota_manager.c  ota_manager.h  pin_config.h  relay_control.c  relay_control.h  touch.c  touch.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
